--- a/src/gucken/resources/gucken.css
+++ b/src/gucken/resources/gucken.css
@@ -34,7 +34,7 @@ Next > Container > Horizontal > Button {
 
 #markdown {
     margin: 0 0;
-    margin-top: -1;
+    margin-top: -2;
 }
 
 /*TODO: make height 100 of what the table needs, so there is only one scroll*/
@@ -65,6 +65,10 @@ ClickableListItem {
     color: $text;
     dock: bottom;
     height: 1;
+}
+
+SortableTable {
+    width: auto;
 }
 
 /*$accent: lime;*/
