--- a/src/gucken/resources/gucken.css
+++ b/src/gucken/resources/gucken.css
@@ -217,3 +217,59 @@ ScrollableContainer > Horizontal#res_con_2 {
     margin: 1 0;
     content-align: center middle;
 }
+
+#popular_container {
+    layout: vertical;
+    overflow: auto;
+    margin-bottom: 2;
+}
+
+.popular_title {
+    height: 2;
+    width: 100%;
+    text-align: left;
+    margin: 1 0 1 0;
+    color: $accent;
+    content-align: left middle;
+}
+
+.popular_section {
+    layout: grid;
+    grid-size: 8;
+    grid-rows: auto;
+    grid-gutter: 1;
+    margin-bottom: 2;
+    height: auto;
+}
+
+.popular_card {
+    height: auto;
+    max-height: 20;
+    width: 100%;
+    margin: 0;
+    content-align: center top;
+    layout: vertical;
+}
+
+.popular_card Image {
+    height: 16;
+    width: 24;
+    content-align: center top;
+    background: $background;
+}
+
+.popular_card Label {
+    height: 1;
+    width: 24;
+    max-width: 100%;
+    text-align: center;
+    overflow: hidden;
+}
+
+/* Platzhalter für leere Listen */
+.popular_card.placeholder {
+    background: $surface;
+    content-align: center middle;
+    min-height: 6;
+    margin: 2 0 2 0;
+}
